controller and integration tests

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,26 @@
 services:
+  web:
+    image: web:latest
+    container_name: web
+    environment:
+      DB_USER: app
+      DB_PASSWORD: password
+      DB_HOST: mysql
+      DB_NAME: api_database
+    ports:
+      - "8080:8080"
+    depends_on:
+      mysql:
+        condition: service_healthy
+    restart: always
+    networks:
+      - api-networks
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/health"]
+      interval: 3s
+      timeout: 5s
+      retries: 5
+      start_period: 3s
   mysql:
     image: mysql:8.0
     container_name: mysql
